--- a/index.html
+++ b/index.html
@@ -1,25 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/index.css" />
-    <title>Hoxton Breweries</title>
-    <script defer src="index.js"></script>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="styles/reset.css" />
+		<link rel="stylesheet" href="styles/index.css" />
+		<title>Hoxton Breweries</title>
+		<script defer src="index.js"></script>
+	</head>
 
-  <body>
-    <header class="main-header">
-      <section class="select-state-section">
-        <h2>Hoxton Breweries</h2>
-        <form id="select-state-form" autocomplete="off">
-          <label for="select-state">Which US state are you visiting?</label>
-          <input id="select-state" name="select-state" type="text" />
-        </form>
-      </section>
-    </header>
-    <main></main>
-  </body>
+	<body>
+		<header class="main-header">
+			<section class="select-state-section">
+				<h2>Hoxton Breweries</h2>
+				<form id="select-state-form" autocomplete="off">
+					<label for="select-state">Which US state are you visiting?</label>
+					<input id="select-state" name="select-state" type="text" />
+				</form>
+			</section>
+		</header>
+		<main>
+			<aside class="filters-section">
+				<aside class="filters-section">
+					<h2>Filter By:</h2>
+					<form id="filter-by-type-form" autocompete="off">
+						<label for="filter-by-type"><h3>Type of Brewery</h3></label>
+						<select name="filter-by-type" id="filter-by-type">
+							<option value="">Select a type...</option>
+							<option value="micro">Micro</option>
+							<option value="regional">Regional</option>
+							<option value="brewpub">Brewpub</option>
+						</select>
+					</form>
+					<div class="filter-by-city-heading">
+						<h3>Cities</h3>
+						<button class="clear-all-btn">clear all</button>
+					</div>
+					<form id="filter-by-city-form">
+						<!-- <input type="checkbox" name="chardon" value="chardon" id="chardon" />
+							<label for="chardon">Chardon</label>
+							<input type="checkbox" name="cincinnati" value="cincinnati" id="cincinnati" />
+							<label for="cincinnati">Cincinnati</label> -->
+					</form>
+				</aside>
+			</aside>
+			<section class="list-section">
+				<h1>List of Breweries</h1>
+				<header class="search-bar">
+					<form id="search-breweries-form" autocomplete="off">
+						<label for="search-breweries"><h2>Search breweries:</h2></label>
+						<input id="search-breweries" name="search-breweries" type="text" />
+					</form>
+				</header>
+				<article>
+					<ul class="breweries-list">
+						<!-- <li>
+							<h2>Snow Belt Brew</h2>
+							<div class="type">micro</div>
+							<section class="address">
+								<h3>Address:</h3>
+								<p>9511 Kile Rd</p>
+								<p><strong>Chardon, 44024</strong></p>
+							</section>
+							<section class="phone">
+								<h3>Phone:</h3>
+								<p>N/A</p>
+							</section>
+							<section class="link">
+								<a href="#" target="_blank">Visit Website</a>
+							</section>
+						</li> -->
+					</ul>
+				</article>
+			</section>
+		</main>
+	</body>
 </html>
