--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 						<label for="search-breweries"><h2>Search breweries:</h2></label>
 						<input id="search-breweries" name="search-breweries" type="text" />
 					</form>
+					<section class="pages"></section>
 				</header>
 				<article>
 					<ul class="breweries-list">
