--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h2>Hoxton Breweries</h2>
 				<form id="select-state-form" autocomplete="off">
 					<label for="select-state">Which US state are you visiting?</label>
-					<input id="select-state" name="select-state" type="text" />
+					<input id="select-state" name="select-state" type="text" required minlength="4" />
 				</form>
 			</section>
 		</header>
