--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<header class="search-bar">
 					<form id="search-breweries-form" autocomplete="off">
 						<label for="search-breweries"><h2>Search breweries:</h2></label>
-						<input id="search-breweries" name="search-breweries" type="text" />
+						<input id="search-breweries" name="search-breweries" type="text" placeholder="Search by city or name" />
 					</form>
 					<section class="pages"></section>
 				</header>
